# binaryornot-stubs

./: README.md  pyproject.toml
binaryornot-stubs/: check.pyi
