[project]
name = "binaryornot-stubs"
version = "1.0.0"
description = "Stubs (typing) for binaryornot package."
readme = "README.md"
authors = [{ name = "Heliton Martins", email = "helitonmrf@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["binaryornot>=0.4.4"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Typing :: Stubs Only",
    "Typing :: Typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["binaryornot-stubs/*.pyi"]

[tool.hatch.build.targets.sdist]
include = ["binaryornot-stubs/*.pyi"]

[tool.hatch.build.targets.wheel]
packages = ["binaryornot-stubs"]

[tool.hatch.build.targets.wheel.force-include]
"binaryornot-stubs" = "binaryornot-stubs"

[dependency-groups]
dev = ["black>=24.10.0", "mypy>=1.13.0"]
